<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AarogyaSarthi.CoronaTab">

    <RelativeLayout
        android:id="@+id/pagetitle"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/relativered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/everything_you_need_nto_know_about_ncovid_19"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/coronapagerelativetheme"
        android:elevation="10dp"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toBottomOf="@+id/pagetitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/symptomcard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="20dp"
                    android:elevation="20dp"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RelativeLayout
                            android:id="@+id/card_title"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:background="@color/relativered">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="35dp"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/coronacough"/>

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="20dp"
                                    android:src="@drawable/coronasymptom1"/>

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="20dp"
                                    android:src="@drawable/coronasymptom3"/>
                            </LinearLayout>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/card_title">

                            <TextView
                                android:id="@+id/context"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:text="@string/symptoms"
                                android:textSize="20sp"/>

                            <TextView
                                android:id="@+id/descOfSymptoms"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/context"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="16dp"
                                android:text="@string/the_symptoms_that_were_previously_ndisclosed_were_mainly_cough_fever_nand_difficulty_in_breathing"
                                android:textAlignment="center"
                                android:textColor="@color/greyishblack"
                                android:textSize="16sp"/>

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/taketestagainbtn"
                                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/descOfSymptoms"
                                android:layout_alignEnd="@+id/descOfSymptoms"
                                android:layout_marginTop="10dp"
                                android:text="@string/take_test_again"
                                android:textColor="@color/relativered"
                                app:strokeColor="@color/relativered"
                                app:strokeWidth="2dp">

                            </com.google.android.material.button.MaterialButton>

                        </RelativeLayout>

                    </RelativeLayout>


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/symptomcard"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:elevation="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/remedyimgview"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/medicalbackground"/>

                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/remedyimgview">

                            <RelativeLayout
                                android:id="@+id/scrollRelative"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/remedytitle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:text="@string/remedies_you_can_do_tosafeguard_nyourself_from_corona_virus"
                                    android:textAlignment="center"
                                    android:textSize="18sp">

                                </TextView>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/remedytitle"
                                    android:orientation="vertical">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="horizontal">

                                        <ImageView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginStart="10dp"
                                            android:layout_marginTop="40dp"
                                            android:src="@drawable/namaste">

                                        </ImageView>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginStart="10dp"
                                            android:layout_marginTop="50dp"
                                            android:layout_marginEnd="10dp"
                                            android:text="@string/take_care_not_to_shake_hands_with_anyone_you_came_in_contact_with"
                                            android:textSize="15sp"/>


                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="2dp"
                                        android:orientation="horizontal">

                                        <ImageView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginStart="10dp"
                                            android:layout_marginTop="40dp"
                                            android:src="@drawable/mask">

                                        </ImageView>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginStart="10dp"
                                            android:layout_marginTop="43dp"
                                            android:layout_marginEnd="10dp"
                                            android:lines="3"
                                            android:text="@string/always_wear_mask_while_going_out_because_this_virus_is_spread_though_the_cough_droplets"
                                            android:textAlignment="textStart"
                                            android:textSize="15sp"/>


                                    </LinearLayout>

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="2dp"
                                        android:orientation="horizontal">

                                        <ImageView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginStart="10dp"
                                            android:layout_marginTop="40dp"
                                            android:src="@drawable/sanitizer">

                                        </ImageView>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginStart="10dp"
                                            android:layout_marginTop="55dp"
                                            android:layout_marginEnd="10dp"
                                            android:lines="2"
                                            android:text="@string/always_wash_you_hands_with_soap_after_coming_home"
                                            android:textSize="15sp"/>


                                    </LinearLayout>


                                </LinearLayout>

                            </RelativeLayout>


                        </ScrollView>


                    </RelativeLayout>


                </com.google.android.material.card.MaterialCardView>

            </RelativeLayout>

        </ScrollView>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>